applications/monitoring/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app.kubernetes.io/name: kiali
spec:
  hosts:
  - kiali.idp.local
  gateways:
  - istio-system/idp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kiali
        port:
          number: 20001
    timeout: 60s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
  labels:
    app.kubernetes.io/name: grafana
spec:
  hosts:
  - grafana.idp.local
  gateways:
  - istio-system/idp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana
        port:
          number: 3000
    timeout: 60s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
  labels:
    app.kubernetes.io/name: jaeger
spec:
  hosts:
  - jaeger.idp.local
  gateways:
  - istio-system/idp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tracing
        port:
          number: 80
    timeout: 60s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
  labels:
    app.kubernetes.io/name: prometheus
spec:
  hosts:
  - prometheus.idp.local
  gateways:
  - istio-system/idp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
    timeout: 60s
